tests/negative/gold/block3_test.gold
tests/negative/block3_test.toit:7:6: error: Unexpected block
    (: debug it)
     ^~~~~~~~~~
tests/negative/block3_test.toit:7:5: error: Set elements may not be blocks
    (: debug it)
    ^
Compilation failed.
